Fix resume dialog file picker complaining about not yet existing paths.

BUG:240645

Also don't lose the file name across directory changes in the file picker.